force-app/main/default/objects/Opportunity/fields/AgreementsBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>AgreementsBrandmaker__c</fullName>
    <label>Agreements - Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>