force-app/main/default/objects/Opportunity/fields/AmountBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>AmountBrandmaker__c</fullName>
    <description>This is the amount that represents the value for the Brandmaker Partner Portal.</description>
    <formula>ModulesEntireTermBrandmaker__c + OneTimeTechinicalSetupBrandmaker__c +  ProfessionalServicesBrandMaker__c +  HostingBrandmaker__c  +  AgreementsBrandmaker__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the amount that represents the value for the Brandmaker Partner Portal.</inlineHelpText>
    <label>Amount Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>