force-app/main/default/objects/Opportunity/fields/AmountBrandmakerOld__c.field-meta.xml
<CustomField>
    <fullName>AmountBrandmakerOld__c</fullName>
    <inlineHelpText>This is the amount that represents the value for the Brandmaker Partner Portal.</inlineHelpText>
    <label>Amount Brandmaker old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>