force-app/main/default/objects/Opportunity/fields/AmountSAS__c.field-meta.xml
<CustomField>
    <fullName>AmountSAS__c</fullName>
    <label>Amount SAS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>