force-app/main/default/objects/Opportunity/fields/ANr__c.field-meta.xml
<CustomField>
    <fullName>ANr__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <externalId>true</externalId>
    <label>A Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>