force-app/main/default/objects/Opportunity/fields/AugForecast__c.field-meta.xml
<CustomField>
    <fullName>AugForecast__c</fullName>
    <label>Aug Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>