force-app/main/default/objects/Opportunity/fields/Autorenewal__c.field-meta.xml
<CustomField>
    <fullName>Autorenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorenewal</label>
    <type>Checkbox</type>
</CustomField>