force-app/main/default/objects/Opportunity/fields/BusinessConsultant__c.field-meta.xml
<CustomField>
    <fullName>BusinessConsultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Business Consultant)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>