force-app/main/default/objects/Opportunity/fields/CalculateForecast__c.field-meta.xml
<CustomField>
    <fullName>CalculateForecast__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Set project start and end date to split the amount x probability to the project duration</inlineHelpText>
    <label>Split forecast automatically</label>
    <type>Checkbox</type>
</CustomField>