force-app/main/default/objects/Opportunity/fields/ComponentsModules__c.field-meta.xml
<CustomField>
    <fullName>ComponentsModules__c</fullName>
    <label>Components / Modules</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>