force-app/main/default/objects/Opportunity/fields/CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatus__c</fullName>
    <label>Current Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>