force-app/main/default/objects/Opportunity/fields/DateNextStep__c.field-meta.xml
<CustomField>
    <fullName>DateNextStep__c</fullName>
    <label>Date: Next Step</label>
    <type>Date</type>
</CustomField>