force-app/main/default/objects/Opportunity/fields/DecForecast__c.field-meta.xml
<CustomField>
    <fullName>DecForecast__c</fullName>
    <label>Dec Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>