force-app/main/default/objects/Opportunity/fields/DiffProjectEndTodayMonths__c.field-meta.xml
<CustomField>
    <fullName>DiffProjectEndTodayMonths__c</fullName>
    <formula>ABS(
( 
(YEAR(ProjectEnd__c ) - YEAR(Today() ) - 1) *12) 
+ 
((12 - MONTH(Today() ) +1) + MONTH(ProjectEnd__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff Project End / Today (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>