force-app/main/default/objects/Opportunity/fields/DiffProjectStartTodayMonths__c.field-meta.xml
<CustomField>
    <fullName>DiffProjectStartTodayMonths__c</fullName>
    <formula>ABS(
(
(YEAR(ProjectStart__c ) - YEAR(Today() ) - 1) *12) 
+ 
((12 - MONTH(Today() ) +1) + MONTH(ProjectStart__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff Project Start / Today (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>