force-app/main/default/objects/Opportunity/fields/Feb_Forecast_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Feb_Forecast_Next_Year__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Feb Forecast Next Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>