force-app/main/default/objects/Opportunity/fields/ForecastCategoryBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategoryBrandmaker__c</fullName>
    <label>Forecast Category - Brandmaker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>