force-app/main/default/objects/Opportunity/fields/HostingAndAgreementsBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>HostingAndAgreementsBrandmaker__c</fullName>
    <formula>HostingBrandmaker__c + AgreementsBrandmaker__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hosting and Agreements - Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>