force-app/main/default/objects/Opportunity/fields/HostingBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>HostingBrandmaker__c</fullName>
    <label>Hosting - Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>