force-app/main/default/objects/Opportunity/fields/HostingGB__c.field-meta.xml
<CustomField>
    <fullName>HostingGB__c</fullName>
    <formula>HostingBrandmaker__c *  LicencePercentageGB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hosting - GB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>