force-app/main/default/objects/Opportunity/fields/ILVForecast__c.field-meta.xml
<CustomField>
    <fullName>ILVForecast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ILV Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>