force-app/main/default/objects/Opportunity/fields/InactiveOwner__c.field-meta.xml
<CustomField>
    <fullName>InactiveOwner__c</fullName>
    <formula>NOT(Owner.IsActive)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Owner</label>
    <type>Checkbox</type>
</CustomField>