force-app/main/default/objects/Opportunity/fields/JanForecast__c.field-meta.xml
<CustomField>
    <fullName>JanForecast__c</fullName>
    <label>Jan Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>