force-app/main/default/objects/Opportunity/fields/JanForecastNextYear__c.field-meta.xml
<CustomField>
    <fullName>JanForecastNextYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Jan Forecast Next Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>