force-app/main/default/objects/Opportunity/fields/JulForecast__c.field-meta.xml
<CustomField>
    <fullName>JulForecast__c</fullName>
    <label>Jul Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>