force-app/main/default/objects/Opportunity/fields/KeyAccountManager__c.field-meta.xml
<CustomField>
    <fullName>KeyAccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Key Account Manager)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>