force-app/main/default/objects/Opportunity/fields/LeadOpportunityController__c.field-meta.xml
<CustomField>
    <fullName>LeadOpportunityController__c</fullName>
    <label>Lead Opportunity Controller</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Retail SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>