force-app/main/default/objects/Opportunity/fields/LicencePercentageGB__c.field-meta.xml
<CustomField>
    <fullName>LicencePercentageGB__c</fullName>
    <defaultValue>IF($User.Id=&quot;005b0000001rsub&quot;,0.30,(IF($UserRole.Id=&quot;00Eb0000000pXDv&quot;,0.20,0.50))
)</defaultValue>
    <label>Licence Percentage GB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>