force-app/main/default/objects/Opportunity/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscription (SaaS)</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>