force-app/main/default/objects/Opportunity/fields/ManagerComments__c.field-meta.xml
<CustomField>
    <fullName>ManagerComments__c</fullName>
    <label>Manager Comments</label>
    <type>TextArea</type>
</CustomField>