force-app/main/default/objects/Opportunity/fields/MayForecast__c.field-meta.xml
<CustomField>
    <fullName>MayForecast__c</fullName>
    <label>May Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>