force-app/main/default/objects/Opportunity/fields/ModulesEntireTermBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>ModulesEntireTermBrandmaker__c</fullName>
    <label>Modules (Entire Term) - Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>