force-app/main/default/objects/Opportunity/fields/ModulesEntireTermGB__c.field-meta.xml
<CustomField>
    <fullName>ModulesEntireTermGB__c</fullName>
    <formula>ModulesEntireTermBrandmaker__c * LicencePercentageGB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modules (Entire Term) - GB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>