force-app/main/default/objects/Opportunity/fields/ModulesEntireTermGBOld__c.field-meta.xml
<CustomField>
    <fullName>ModulesEntireTermGBOld__c</fullName>
    <label>Modules (Entire Term) - GB old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>