force-app/main/default/objects/Opportunity/fields/ModulesYearlyBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>ModulesYearlyBrandmaker__c</fullName>
    <formula>ModulesEntireTermBrandmaker__c / (VALUE(TEXT(ContractPeriod__c)) /12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modules (Yearly) - Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>