force-app/main/default/objects/Opportunity/fields/ModulesYearlyBrandmakerOld__c.field-meta.xml
<CustomField>
    <fullName>ModulesYearlyBrandmakerOld__c</fullName>
    <label>Modules (Yearly) - Brandmaker old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>