force-app/main/default/objects/Opportunity/fields/ModulesYearlyGB__c.field-meta.xml
<CustomField>
    <fullName>ModulesYearlyGB__c</fullName>
    <formula>ModulesEntireTermBrandmaker__c / (VALUE(TEXT(ContractPeriod__c)) /12)* LicencePercentageGB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modules (Yearly) - GB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>