force-app/main/default/objects/Opportunity/fields/ModulesYearlyGBOld__c.field-meta.xml
<CustomField>
    <fullName>ModulesYearlyGBOld__c</fullName>
    <label>Modules (Yearly) - GB old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>