force-app/main/default/objects/Opportunity/fields/NovForecast__c.field-meta.xml
<CustomField>
    <fullName>NovForecast__c</fullName>
    <label>Nov Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>