force-app/main/default/objects/Opportunity/fields/OctForecast__c.field-meta.xml
<CustomField>
    <fullName>OctForecast__c</fullName>
    <label>Oct Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>