force-app/main/default/objects/Opportunity/fields/OneTimeTechinicalSetupBrandmaker__c.field-meta.xml
<CustomField>
    <fullName>OneTimeTechinicalSetupBrandmaker__c</fullName>
    <label>One-Time Techinical Setup - Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>