force-app/main/default/objects/Opportunity/fields/OneTimeTechinicalSetupGB__c.field-meta.xml
<CustomField>
    <fullName>OneTimeTechinicalSetupGB__c</fullName>
    <formula>OneTimeTechinicalSetupBrandmaker__c * LicencePercentageGB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One-Time Techinical Setup - GB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>