force-app/main/default/objects/Opportunity/fields/OpportunityBundle__c.field-meta.xml
<CustomField>
    <fullName>OpportunityBundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Bundle</label>
    <referenceTo>OpportunityBundle__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>