force-app/main/default/objects/Opportunity/fields/OpportunityNr__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNr__c</fullName>
    <displayFormat>O-{000000}</displayFormat>
    <label>Opportunity Nr.</label>
    <type>AutoNumber</type>
</CustomField>