force-app/main/default/objects/Opportunity/fields/PNr__c.field-meta.xml
<CustomField>
    <fullName>PNr__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <externalId>true</externalId>
    <label>P-Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>