force-app/main/default/objects/Opportunity/fields/ProfessionalServicesBrandMaker__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalServicesBrandMaker__c</fullName>
    <label>Professional Services - Brandmaker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>