force-app/main/default/objects/Opportunity/fields/ProfessionalServicesGB__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalServicesGB__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Professional Services - GB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>