force-app/main/default/objects/Opportunity/fields/ProjectDurationMonths__c.field-meta.xml
<CustomField>
    <fullName>ProjectDurationMonths__c</fullName>
    <formula>(
Year( ProjectEnd__c )*12 +Month(ProjectEnd__c)
)
-
(
Year( ProjectStart__c )*12 +Month(ProjectStart__c)
)
+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>