force-app/main/default/objects/Opportunity/fields/ProjectEnd__c.field-meta.xml
<CustomField>
    <fullName>ProjectEnd__c</fullName>
    <label>End Project (Date)</label>
    <type>Date</type>
</CustomField>