force-app/main/default/objects/Opportunity/fields/ProjectResponsibleBusiness__c.field-meta.xml
<CustomField>
    <fullName>ProjectResponsibleBusiness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Responsible - (Business)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>PMForOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>