force-app/main/default/objects/Opportunity/fields/ProjectResponsibleTechnical__c.field-meta.xml
<CustomField>
    <fullName>ProjectResponsibleTechnical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Responsible - (Technical)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Technical Project Manager)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>