force-app/main/default/objects/Opportunity/fields/ProjectStart__c.field-meta.xml
<CustomField>
    <fullName>ProjectStart__c</fullName>
    <label>Start Project (Date)</label>
    <type>Date</type>
</CustomField>