force-app/main/default/objects/Opportunity/fields/ProjectSystemType__c.field-meta.xml
<CustomField>
    <fullName>ProjectSystemType__c</fullName>
    <label>Project / System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>BrandMaker</fullName>
            </value>
            <value>
                <fullName>Censhare</fullName>
            </value>
            <value>
                <fullName>Magnolia</fullName>
            </value>
            <value>
                <fullName>Officeatwork</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>