force-app/main/default/objects/Opportunity/fields/Q1_Forecast_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Q1_Forecast_Next_Year__c</fullName>
    <formula>JanForecastNextYear__c +  Feb_Forecast_Next_Year__c +  Mar_Forecast_Next_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Forecast Next Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>