force-app/main/default/objects/Opportunity/fields/Q1ff_Forecast_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Q1ff_Forecast_Next_Year__c</fullName>
    <formula>Total_Revenu_Forecast_ecl_ILV_and_Suppl__c  -  TotalForecastCurrentYear__c -  Q1_Forecast_Next_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1+ Forecast Next Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>