force-app/main/default/objects/Opportunity/fields/Q1Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q1Forecast__c</fullName>
    <formula>JanForecast__c+FebForecast__c+MarForecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>