force-app/main/default/objects/Opportunity/fields/Q2Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q2Forecast__c</fullName>
    <formula>AprForecast__c+MayForecast__c+JunForecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>