force-app/main/default/objects/Opportunity/fields/Q3Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q3Forecast__c</fullName>
    <formula>JulForecast__c+AugForecast__c+SepForecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>