force-app/main/default/objects/Opportunity/fields/ReasonWonLost__c.field-meta.xml
<CustomField>
    <fullName>ReasonWonLost__c</fullName>
    <label>Reason Won/Lost</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Resource availability</fullName>
            </value>
            <value>
                <fullName>Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>