force-app/main/default/objects/Opportunity/fields/ReasonWonLostComment__c.field-meta.xml
<CustomField>
    <fullName>ReasonWonLostComment__c</fullName>
    <label>Reason Won/Lost Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>