force-app/main/default/objects/Opportunity/fields/RelevantModules__c.field-meta.xml
<CustomField>
    <fullName>RelevantModules__c</fullName>
    <label>Relevant Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Planer</fullName>
            </value>
            <value>
                <fullName>Event Manager</fullName>
            </value>
            <value>
                <fullName>Job Manager</fullName>
            </value>
            <value>
                <fullName>Review Manager</fullName>
            </value>
            <value>
                <fullName>Brand Management Portal</fullName>
            </value>
            <value>
                <fullName>Media Pool</fullName>
            </value>
            <value>
                <fullName>Marketing PM</fullName>
            </value>
            <value>
                <fullName>Web-to-Print</fullName>
            </value>
            <value>
                <fullName>Web-to-Web</fullName>
            </value>
            <value>
                <fullName>Marketing Shop</fullName>
            </value>
            <value>
                <fullName>Reporting Center</fullName>
            </value>
            <value>
                <fullName>Language Center</fullName>
            </value>
            <value>
                <fullName>Smart Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>