force-app/main/default/objects/Opportunity/fields/RessourcesPlanned__c.field-meta.xml
<CustomField>
    <fullName>RessourcesPlanned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ressources Planned</label>
    <type>Checkbox</type>
</CustomField>