force-app/main/default/objects/Opportunity/fields/SepForecast__c.field-meta.xml
<CustomField>
    <fullName>SepForecast__c</fullName>
    <label>Sep Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>