force-app/main/default/objects/Opportunity/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brandmaker</fullName>
                <default>true</default>
                <label>Brandmaker</label>
            </value>
            <value>
                <fullName>Censhare</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>Selligent</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Talkwalker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>