force-app/main/default/objects/Opportunity/fields/SupplierCostsForecast__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsForecast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Supplier Costs Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>