force-app/main/default/objects/Opportunity/fields/Total_Revenu_Forecast_ecl_ILV_and_Suppl__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenu_Forecast_ecl_ILV_and_Suppl__c</fullName>
    <formula>(Amount -  ILVForecast__c -  SupplierCostsForecast__c)* Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenu Forecast excl. ILV &amp; Suppl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>