force-app/main/default/objects/Opportunity/fields/TotalForecastCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>TotalForecastCurrentYear__c</fullName>
    <formula>JanForecast__c+FebForecast__c+MarForecast__c+AprForecast__c+MayForecast__c+JunForecast__c+JulForecast__c+AugForecast__c+SepForecast__c+OctForecast__c+NovForecast__c+DecForecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast current year, excl. ILV+Supp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>