force-app/main/default/objects/Opportunity/fields/TotalWorkloadInDays__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkloadInDays__c</fullName>
    <label>Total Workload in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>