force-app/main/default/objects/Opportunity/fields/ZInactiveOwner__c.field-meta.xml
<CustomField>
    <fullName>ZInactiveOwner__c</fullName>
    <formula>AND(
 IsClosed =FALSE,
NOT(Owner.IsActive)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZInactiveOwner</label>
    <type>Checkbox</type>
</CustomField>