force-app/main/default/objects/Opportunity/fields/ZOpportunityClosed__c.field-meta.xml
<CustomField>
    <fullName>ZOpportunityClosed__c</fullName>
    <formula>IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZOpportunityClosed</label>
    <type>Checkbox</type>
</CustomField>