force-app/main/default/objects/Opportunity/fields/ZPrintPlusLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ZPrintPlusLastModifiedDate__c</fullName>
    <label>ZPrintPlusLastModifiedDate</label>
    <type>Date</type>
</CustomField>