force-app/main/default/objects/Opportunity/recordTypes/BLC_Services.recordType-meta.xml
<RecordType>
    <fullName>BLC_Services</fullName>
    <active>true</active>
    <businessProcess>BLC - Services</businessProcess>
    <label>BLC - Services</label>
    
</RecordType>