force-app/main/default/objects/Opportunity/recordTypes/GB_CH_Lizenzen.recordType-meta.xml
<RecordType>
    <fullName>GB_CH_Lizenzen</fullName>
    <active>true</active>
    <businessProcess>GB - BrandMaker License</businessProcess>
    <label>GB CH - Lizenzen</label>
    
</RecordType>