force-app/main/default/objects/Opportunity/validationRules/OP002_Comment_for_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>OP002_Comment_for_Closed_Lost</fullName>
    <active>true</active>
    <description>All Opportunities with the Status &apos;Closed Lost&apos; and the Reason Won/Lost &apos;Other&apos; need to have a Reason Won/Lost Comment</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

  ZImportSource__c != &quot;Print Plus - Talend Job #1020&quot;,
ISPICKVAL(
  StageName , &quot;Closed Lost&quot;),
INCLUDES(
ReasonWonLost__c, &quot;Other&quot;),
ISBLANK(
 ReasonWonLostComment__c )
)</errorConditionFormula>
    <errorDisplayField>ReasonWonLostComment__c</errorDisplayField>
    <errorMessage>Every Opportunity with the Status &apos;Closed Lost&apos; and the Reason Won/Lost &apos;Other&apos; need to have a Reason Won/Lost Comment.
(OP002)</errorMessage>
</ValidationRule>