force-app/main/default/objects/Opportunity/validationRules/OP003_Project_End_Date_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>OP003_Project_End_Date_after_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ProjectStart__c &gt; ProjectEnd__c
)</errorConditionFormula>
    <errorDisplayField>ProjectStart__c</errorDisplayField>
    <errorMessage>Project Start Date must be prior to Project End Date.
(OP003)</errorMessage>
</ValidationRule>